update code and go version
